--- a/Makefile.master
+++ b/Makefile.master
@@ -98,8 +98,7 @@ VPATH = $(LIB_DIRS)
 # Macros derived from boards.txt
 MCU := $(shell sed -n 's/$(BOARD)\.build\.mcu=\(.*\)/\1/p' < $(ARD_BOARDS))
 F_CPU := $(shell sed -n 's/$(BOARD)\.build\.f_cpu=\(.*\)/\1/p' < $(ARD_BOARDS))
-UPLOAD_SPEED := \
-    $(shell sed -n 's/$(BOARD)\.upload\.speed=\(.*\)/\1/p' < $(ARD_BOARDS))
+UPLOAD_SPEED := $(shell sed -n 's/$(BOARD)\.upload\.speed=\(.*\)/\1/p' < $(ARD_BOARDS))
 
 # Build tools.
 CC = $(ARD_BIN)/avr-gcc
@@ -162,7 +161,7 @@ ifneq "$(strip $(LIB_C_SRC) $(LIB_CXX_SRC))" ""
 	LIB_CXX_OBJ = $(patsubst %.cpp,%.o,$(notdir $(LIB_CXX_SRC)))
 	LIB_LIB = library
 	LIB_AR = $(BUILD_DIR)/lib$(LIB_LIB).a
-	LIB_AR_OBJ = $(LIB_AR)($(LIB_C_OBJ)$(LIB_CXX_OBJ))
+	LIB_AR_OBJ = $(foreach ld,$(LIB_C_OBJ),$(LIB_AR)/($(ld))) $(foreach ld,$(LIB_CXX_OBJ),$(LIB_AR)/($(ld)))
 	LIB_LD_FLAG = -l$(LIB_LIB)
 endif
 
