--- a/Makefile.master
+++ b/Makefile.master
@@ -115,14 +115,10 @@ MV = mv -f
 LN = ln -f
 
 # Compiler flags.
-INC_FLAGS = \
-    $(addprefix -I,$(INC_DIRS)) $(addprefix -I,$(LIB_DIRS)) -I$(ARD_SRC_DIR)
+INC_FLAGS = $(addprefix -I,$(INC_DIRS)) $(addprefix -I,$(LIB_DIRS)) -I$(ARD_SRC_DIR)
 ARD_FLAGS = -mmcu=$(MCU) -DF_CPU=$(F_CPU) -DARDUINO=$(ARD_REV)
-C_CXX_FLAGS = \
-    -Wall -Wextra -Wundef -Wno-unused-parameter \
-    -fdiagnostics-show-option -g -Wa,-adhlns=$(BUILD_DIR)/$*.lst 
-C_FLAGS = \
-    $(C_CXX_FLAGS) -std=gnu99 -Wstrict-prototypes -Wno-old-style-declaration
+C_CXX_FLAGS = -Wall -Wextra -Wundef -Wno-unused-parameter -fdiagnostics-show-option -g -Wa,-adhlns=$(BUILD_DIR)/$*.lst 
+C_FLAGS = $(C_CXX_FLAGS) -std=gnu99 -Wstrict-prototypes -Wno-old-style-declaration
 CXX_FLAGS = $(C_CXX_FLAGS)
 
 # Optimiser flags.
@@ -186,8 +182,7 @@ endif
 # Definitions.
 define run-cc
 	@ $(CC) $(ARD_FLAGS) $(INC_FLAGS) -M -MT '$@($%)' -MF $@_$*.dep $<
-	$(CC) -c $(C_FLAGS) $(OPT_FLAGS) $(ARD_FLAGS) $(INC_FLAGS) \
-	    $< -o $(BUILD_DIR)/$%
+	$(CC) -c $(C_FLAGS) $(OPT_FLAGS) $(ARD_FLAGS) $(INC_FLAGS) $< -o $(BUILD_DIR)/$%
 	@ $(AR) rc $@ $(BUILD_DIR)/$%
 	@ $(RM) $(BUILD_DIR)/$%
 	@ $(CXXFILT) < $(BUILD_DIR)/$*.lst > $(BUILD_DIR)/$*.lst.tmp
@@ -196,8 +191,7 @@ endef
 
 define run-cxx
 	@ $(CXX) $(ARD_FLAGS) $(INC_FLAGS) -M -MT '$@($%)' -MF $@_$*.dep $<
-	$(CXX) -c $(CXX_FLAGS) $(OPT_FLAGS) $(ARD_FLAGS) $(INC_FLAGS) \
-	    $< -o $(BUILD_DIR)/$%
+	$(CXX) -c $(CXX_FLAGS) $(OPT_FLAGS) $(ARD_FLAGS) $(INC_FLAGS) $< -o $(BUILD_DIR)/$%
 	@ $(AR) rc $@ $(BUILD_DIR)/$%
 	@ $(RM) $(BUILD_DIR)/$%
 	@ $(CXXFILT) < $(BUILD_DIR)/$*.lst > $(BUILD_DIR)/$*.lst.tmp
@@ -243,12 +237,10 @@ $(BUILD_DIR)/%.d : %.cpp
 	$(run-cxx-d)
 
 $(IMAGE).hex : $(ARD_AR_OBJ) $(LIB_AR_OBJ) $(SKT_AR_OBJ) $(SKT_PDE_OBJ)
-	$(CC) $(CXX_FLAGS) $(OPT_FLAGS) $(ARD_FLAGS) -L$(BUILD_DIR) \
-	    $(SKT_PDE_OBJ) $(SKT_LD_FLAG) $(LIB_LD_FLAG) $(ARD_LD_FLAG) -lm \
+	$(CC) $(CXX_FLAGS) $(OPT_FLAGS) $(ARD_FLAGS) -L$(BUILD_DIR) $(SKT_PDE_OBJ) $(SKT_LD_FLAG) $(LIB_LD_FLAG) $(ARD_LD_FLAG) -lm \
 	    -o $(IMAGE).elf
 	$(OBJCOPY) -O ihex -j .eeprom --set-section-flags=.eeprom=alloc,load \
-	    --no-change-warnings --change-section-lma .eeprom=0 $(IMAGE).elf \
-	    $(IMAGE).eep
+	    --no-change-warnings --change-section-lma .eeprom=0 $(IMAGE).elf $(IMAGE).eep
 	$(OBJCOPY) -O ihex -R .eeprom $(IMAGE).elf $(IMAGE).hex
 	$(OBJDUMP) -h -S $(IMAGE).elf | $(CXXFILT) -t > $(IMAGE).lst
 	$(SIZE) $(IMAGE).hex
