--- a/Makefile.master
+++ b/Makefile.master
@@ -115,7 +115,8 @@ MV = mv -f
 LN = ln -f
 
 # Compiler flags.
-INC_FLAGS = $(addprefix -I,$(INC_DIRS)) $(addprefix -I,$(LIB_DIRS)) -I$(ARD_SRC_DIR)
+VARIANTS_DIR = $(ARD_HOME)/hardware/arduino/variants/standard
+INC_FLAGS = $(addprefix -I,$(INC_DIRS)) $(addprefix -I,$(LIB_DIRS)) -I$(ARD_SRC_DIR) -I$(VARIANTS_DIR)
 ARD_FLAGS = -mmcu=$(MCU) -DF_CPU=$(F_CPU) -DARDUINO=$(ARD_REV)
 C_CXX_FLAGS = -Wall -Wextra -Wundef -Wno-unused-parameter -fdiagnostics-show-option -g -Wa,-adhlns=$(BUILD_DIR)/$*.lst 
 C_FLAGS = $(C_CXX_FLAGS) -std=gnu99 -Wstrict-prototypes -Wno-old-style-declaration
