--- a/Makefile.master
+++ b/Makefile.master
@@ -70,13 +70,14 @@ PROGRAMMER ?= stk500v1
 # PROGRAMMER ?= arduino
 MON_CMD ?= screen
 MON_SPEED ?= 9600
+USER_HOME ?= ../
 
 PORT ?= $(wildcard /dev/tty.usb*)
 BOARD ?= atmega328
 
 # Default libraries/Includes
-INC_DIRS = $(addprefix $(ARD_HOME)/libraries/, $(SYSTEM_LIBS)) $(addprefix ../libraries/, $(USER_LIBS))
-LIB_DIRS = $(addprefix $(ARD_HOME)/libraries/, $(SYSTEM_LIBS)) $(addprefix ../libraries/, $(USER_LIBS))
+INC_DIRS = $(addprefix $(ARD_HOME)/libraries/, $(SYSTEM_LIBS)) $(addprefix $(USER_HOME)/libraries/, $(USER_LIBS))
+LIB_DIRS = $(addprefix $(ARD_HOME)/libraries/, $(SYSTEM_LIBS)) $(addprefix $(USER_HOME)/libraries/, $(USER_LIBS))
 
 ### Nothing below here should require editing. ###
 
@@ -122,7 +123,7 @@ LN = ln -f
 VARIANTS_DIR = $(ARD_HOME)/hardware/arduino/variants/standard
 INC_FLAGS = $(addprefix -I,$(INC_DIRS)) $(addprefix -I,$(LIB_DIRS)) -I$(ARD_SRC_DIR) -I$(VARIANTS_DIR)
 ARD_FLAGS = -mmcu=$(MCU) -DF_CPU=$(F_CPU) -DARDUINO=$(ARD_REV)
-C_CXX_FLAGS = -Wall -Wextra -Wundef -Wno-unused-parameter -fdiagnostics-show-option -g -Wa,-adhlns=$(BUILD_DIR)/$*.lst 
+C_CXX_FLAGS = $(USER_C_FLAGS) -Wall -Wextra -Wundef -Wno-unused-parameter -fdiagnostics-show-option -g -Wa,-adhlns=$(BUILD_DIR)/$*.lst 
 C_FLAGS = $(C_CXX_FLAGS) -std=gnu99 -Wstrict-prototypes -Wno-old-style-declaration
 CXX_FLAGS = $(C_CXX_FLAGS)
 
